--- a/overrides/.overrides/home.ja.html
+++ b/overrides/.overrides/home.ja.html
@@ -38,13 +38,13 @@ This file was automatically generated - do not edit
 			<div class="mdx-hero__content">
 				<h1>清華大学電子工学科のバカな二年生が書いたドキュメントを見てください。</h1>
 				<p>時間の無駄でしょうか?</p>
-				<a href="{{ 'zh/projects/' | url }}" title="Xuc のプロジェクト" class="md-button">
+				<a href="{{ 'ja/projects/' | url }}" title="Xuc のプロジェクト" class="md-button">
 					プロジェクト
 				</a>
-				<a href="{{ 'zh/notes/' | url }}" title="Xuc のノート" class="md-button">
+				<a href="{{ 'ja/notes/' | url }}" title="Xuc のノート" class="md-button">
 					ノート
 				</a>
-				<a href="{{ 'zh/about/' | url }}" title="Xuc と彼のドキュメント" class="md-button">
+				<a href="{{ 'ja/about/' | url }}" title="Xuc と彼のドキュメント" class="md-button">
 					について
 				</a>
 			</div>
