--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,4 +1,11 @@
 {#-
-  This file was automatically generated - do not edit
+This file was automatically generated - do not edit
 -#}
 {% extends "base.html" %}
+{% block extrahead %}
+<link rel="stylesheet" href="assets/stylesheets/custom.f7ec4df2.min.css">
+{% endblock %}
+{% block scripts %}
+{{ super() }}
+<script src="assets/javascripts/custom.a678ee80.min.js"></script>
+{% endblock %}
