--- a/overrides/404.html
+++ b/overrides/404.html
@@ -9,10 +9,7 @@
 <link rel="stylesheet" href="{{ 'assets/stylesheets/palette.ecc896b0.min.css' | url }}">
 {% endif %}
 {% include "partials/icons.html" %}
-<link rel="stylesheet" type="text/css" href="{{ 'assets/stylesheets/404-style.css' | url }}"
-  media="screen and (min-width: 800px)">
-<link rel="stylesheet" type="text/css" href="{{ 'assets/stylesheets/404-style-mobile.css' | url }}"
-  media="screen and (max-width: 799px)">
+<link rel="stylesheet" type="text/css" href="{{ 'assets/stylesheets/404-style.css' | url }}">
 {% endblock %}
 {% block site_nav %}
 {% endblock %}
