feat: :sparkles: add analytics

--- a/overrides/base.html
+++ b/overrides/base.html
@@ -73,6 +73,8 @@
       {% endfor %}
     {% endif %}
     {% block extrahead %}{% endblock %}
+    <script async src="https://analytics.panxuc.com/script.js"
+      data-website-id="737ee09e-0078-49b9-abba-d94b586361f6"></script>
   </head>
   {% set direction = config.theme.direction or lang.t("direction") %}
   {% if config.theme.palette %}
